--- a/src/main/resources/templates/addimage.html
+++ b/src/main/resources/templates/addimage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Image</title>
-    <!--Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
@@ -25,19 +25,25 @@
 </nav>
 
 <!-- View Images -->
-<!--Main Content-->
+<!-- Main Content -->
 <div class="my-5">
-    <div class="mx-auto w-25 " style="max-width:100%;">
+    <div class="mx-auto w-50" style="max-width:100%;">
         <h2 class="text-center mb-3">Add Image</h2>
         <form action="add" method="post" enctype="multipart/form-data">
-                <div class="input-group">
-                    <input type="file" class="form-control" id="image" name="image" aria-describedby="inputGroupFileAddon04" aria-label="Upload" required="required">
-                    <button class="btn btn-outline-secondary" type="submit" >Submit</button>
-                </div>
+            <div class="mb-3">
+                <label for="image" class="form-label">Choose Image</label>
+                <input type="file" class="form-control" id="image" name="image" required="required">
+            </div>
+            <div class="mb-3">
+                <label for="title" class="form-label">Title</label>
+                <input type="text" class="form-control" id="title" name="title" required="required">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
-<!--Bootstrap JS -->
+
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
